---
title: "Module: RAG"
---
classDiagram
    direction TB

    class NoteChunk {
        +UUID note_id
        +int chunk_index
        +Vector embedding
    }
    class EmbeddingTask {
        +UUID note_id
        +str status
        +int attempts
    }
    class Note {
        <<external: notes>>
    }
    class NotesRepository {
        <<external: notes>>
    }
    class RAGRepository {
        +create_chunks()
        +search_similar()
        +enqueue()
        +remove_task()
    }
    class RAGService {
        +index_note()
        +remove_note()
        +search()
    }

    Note --> NoteChunk
    Note --> EmbeddingTask
    RAGRepository ..> NoteChunk
    RAGRepository ..> EmbeddingTask
    RAGService --> RAGRepository
    RAGService --> NotesRepository
